# MovCap

./: AGENTS.md  Core.md  LICENSE  README.md  pyproject.toml  requirements.txt  start.bat
config/: default.yaml  skeleton_model.yaml
cpp/: CMakeLists.txt
cpp/bindings/: mocap_bindings.cpp
cpp/triangulation/: triangulator.cpp  triangulator.h
scripts/: calibrate.py  calibrate_imu.py  gui.py  process.py  record.py
src/: __init__.py  demo_data.py  environment.py  pipeline.py
src/acquisition/: __init__.py  camera_manager.py  imu_manager.py  synchronizer.py
src/calibration/: __init__.py  charuco_detector.py  extrinsic_calib.py  imu_calib.py  intrinsic_calib.py
src/fusion/: __init__.py  imu_preprocessor.py  temporal_filter.py  ukf_fusion.py
src/gui/: __init__.py  app.py  skeleton_canvas.py
src/pose/: __init__.py  pose2d_estimator.py  pose3d_reconstructor.py
src/skeleton/: __init__.py  bvh_exporter.py  joint_angle_solver.py  skeleton_model.py
src/visualization/: __init__.py  live_viewer.py
tests/: conftest.py  test_bvh_export.py  test_calibration.py  test_demo_data.py  test_environment.py  test_fusion.py  test_imu_preprocessor.py  test_pipeline.py  test_skeleton.py  test_synchronizer.py  test_temporal_filter.py  test_triangulation.py
tools/visualization/: preview_calib.py
